fix spacing, fix pokemon random button

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,21 @@
     padding-right: 10px;
 }
 
+#searchBar {
+    position: absolute;
+    left: 10px;
+    top: 60px;
+}
+
 #topNav {
-    height: 130px;
-    top: -70px;
+    height: 100px;
+    top: -20px;
+    margin-bottom: 50px;
+}
+
+#colorSelectorPage {
+    margin-top: 25px;
+    justify-content: center;
 }
 
 .nav-item {
@@ -50,8 +62,9 @@ html {
 }
 
 body {
-    padding-top: 70px; /* Adjust the value based on the height of your navbar */
+    padding-top: 90px; /* Adjust the value based on the height of your navbar */
     margin-left: 0px;
+
 }
 
 .center {
@@ -98,8 +111,9 @@ body {
 }
 
 #powerButton {
+    position: absolute;
     margin: auto;
-    margin-top: 90px;
+    margin-top: 60px;
     font-size: 40px;
     cursor: pointer;
     margin-bottom: 20px;
@@ -149,8 +163,6 @@ p {
 }
 
 #randomPokemon {
-    position:absolute;
-    right: 20px;
     cursor: pointer;
     font-size: 24px;
     user-select: none;
@@ -158,6 +170,11 @@ p {
     border-radius: 10px;
     height: 25px;
     width: 25px;
+
+    position: absolute;
+    top: 45px;
+    right: 40px;
+    background-color: rgb(237, 237, 200);
 }
 
 #randomPokemon:hover {
